Fix: Scroll buttons were too close to the cards in My Media section on the home screen

--- a/Theme/ElegantFin-theme-nightly.css
+++ b/Theme/ElegantFin-theme-nightly.css
@@ -309,6 +309,10 @@ h1 {
     font-size: 1.25em;
 }
 
+.verticalSection.emby-scroller-container>h2.sectionTitle.sectionTitle-cards {
+    padding-top: 1.25em !important;
+}
+
 .emby-scrollbuttons-button.paper-icon-button-light>.material-icons {
     font-size: 1.5em;
     place-content: center;
